--- a/app/src/main/res/layout/fragment_select_experience.xml
+++ b/app/src/main/res/layout/fragment_select_experience.xml
@@ -208,7 +208,8 @@
                 />
         </android.support.v7.widget.CardView>
             <!-- Other experiences -->
-            <android.support.v7.widget.RecyclerView
+            <LinearLayout
+                android:orientation="vertical"
                 android:id="@+id/others"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
@@ -218,7 +219,6 @@
                 android:layout_margin="12dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-
 
                 <LinearLayout
                     android:background="#ededed"
