--- a/app/src/main/res/layout/fragment_help_worker.xml
+++ b/app/src/main/res/layout/fragment_help_worker.xml
@@ -11,8 +11,8 @@
         android:layout_height="wrap_content">
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_margin="18dp"
             android:gravity="center"
@@ -23,9 +23,40 @@
                 android:layout_height="wrap_content"
                 android:text="How can we help?"
                 android:textAlignment="center"
-                android:textSize="20dp"
+                android:textSize="24dp"
                 app:josefin_style="light" />
-
+            <construction.thesquare.shared.view.widget.JosefinSansEditText
+                android:background="@drawable/apptheme_edit_text_search"
+                android:layout_width="match_parent"
+                android:layout_marginTop="80dp"
+                android:textColor="@color/blackSquareColor"
+                android:textAlignment="center"
+                android:gravity="center"
+                android:id="@+id/search_input"
+                android:hint="Search for anything... (price plans,bookings..)"
+                android:layout_height="30dp" />
+            <Button
+                android:id="@id/search_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:text="Search"/>
+            <RelativeLayout
+                android:id="@+id/relativeLayout1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom" >
+            <construction.thesquare.shared.view.widget.JosefinSansTextView
+                android:id="@+id/contact_us"
+                android:textAlignment="center"
+                android:text="@string/help_contact_us"
+                android:drawableBottom="@android:drawable/sym_action_email"
+                android:layout_width="match_parent"
+                app:josefin_style="light"
+                android:textSize="20dp"
+                android:layout_alignParentBottom="true"
+                android:layout_height="wrap_content" />
+            </RelativeLayout>
         </LinearLayout>
 
     </FrameLayout>
