--- a/app/src/main/res/layout/fragment_worker_profile.xml
+++ b/app/src/main/res/layout/fragment_worker_profile.xml
@@ -768,20 +768,47 @@
             android:layout_width="match_parent"
             android:layout_height="240dp" />
 
-
-        <construction.thesquare.shared.view.widget.JosefinSansTextView
-            android:id="@+id/book"
+        <LinearLayout
+            android:weightSum="2"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end|right"
-            android:layout_margin="12dp"
-            android:background="@color/redSquareColor"
-            android:gravity="center"
-            android:padding="12dp"
-            android:text="BOOK"
-            android:textAllCaps="true"
-            android:textColor="@android:color/white"
-            android:textSize="16sp"
-            android:visibility="gone" />
+            android:layout_height="wrap_content">
+
+            <construction.thesquare.shared.view.widget.JosefinSansTextView
+                android:id="@+id/decline"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|end|right"
+                android:layout_marginLeft="12dp"
+                android:layout_marginRight="4dp"
+                android:background="@color/redSquareColor"
+                android:gravity="center"
+                android:padding="12dp"
+                android:text="DECLINE"
+                android:textAllCaps="true"
+                android:textColor="@android:color/white"
+                android:textSize="16sp"
+                android:visibility="gone" />
+
+            <construction.thesquare.shared.view.widget.JosefinSansTextView
+                android:id="@+id/book"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|end|right"
+                android:layout_marginRight="12dp"
+                android:layout_marginLeft="4dp"
+                android:background="@color/redSquareColor"
+                android:gravity="center"
+                android:padding="12dp"
+                android:text="BOOK"
+                android:textAllCaps="true"
+                android:textColor="@android:color/white"
+                android:textSize="16sp"
+                android:visibility="gone" />
+        </LinearLayout>
     </LinearLayout>
 </ScrollView>
