--- a/app/src/main/res/menu/menu_main_employer.xml
+++ b/app/src/main/res/menu/menu_main_employer.xml
@@ -29,6 +29,10 @@
             android:icon="@drawable/ic_share_black_24dp"
             android:title="@string/menu_worker_share" />
         <item
+            android:id="@+id/nav_employer_help"
+            android:icon="@drawable/ic_help_black_24dp"
+            android:title="@string/menu_employer_help" />
+        <item
             android:id="@+id/nav_employer_logout"
             android:icon="@drawable/ic_exit_to_app_black_24dp"
             android:title="@string/menu_employer_log_out" />
