--- a/app/src/main/res/layout/fragment_job_details_worker.xml
+++ b/app/src/main/res/layout/fragment_job_details_worker.xml
@@ -340,13 +340,34 @@
         </ScrollView>
 
         <!-- Action Button -->
-        <Button
-            android:id="@+id/btnWorkerFirstStepNext"
-            style="@style/BaseButton"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_margin="20dp"
-            android:text="@string/apply" />
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/acceptOfferBtn"
+                style="@style/BaseButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="20dp"
+                android:background="@color/greenSquareColor"
+                android:text="Accept offer"
+                android:visibility="gone" />
+
+            <Button
+                android:id="@+id/btnWorkerFirstStepNext"
+                style="@style/BaseButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="20dp"
+                android:text="@string/apply" />
+        </LinearLayout>
     </RelativeLayout>
 </FrameLayout>
