--- a/app/src/main/res/layout/fragment_price_plan.xml
+++ b/app/src/main/res/layout/fragment_price_plan.xml
@@ -286,6 +286,7 @@
             <!-- Change Card Details -->
             <android.support.v7.widget.CardView
                 app:cardElevation="4dp"
+                android:visibility="gone"
                 android:id="@+id/change_card"
                 android:layout_marginRight="12dp"
                 android:layout_marginBottom="12dp"
