cancel job popup prompt

--- a/app/src/main/res/layout/dialog_cancel_job.xml
+++ b/app/src/main/res/layout/dialog_cancel_job.xml
@@ -8,7 +8,7 @@
     android:layout_height="wrap_content">
 
     <construction.thesquare.shared.view.widget.JosefinSansTextView
-        android:text="@string/job_cancel"
+        android:text="@string/employer_jobs_cancel_prompt"
         app:josefin_style="bold"
         android:textColor="@color/blackSquareColor"
         android:textSize="18sp"
