--- a/app/src/main/res/layout/activity_fragment.xml
+++ b/app/src/main/res/layout/activity_fragment.xml
@@ -17,6 +17,7 @@
         <construction.thesquare.shared.view.widget.JosefinSansTextView
             android:id="@+id/menu_request_label"
             android:visibility="gone"
+            app:josefin_style="italic"
             android:layout_width="wrap_content"
             android:textColor="@color/redSquareColor"
             android:text="Request a Review"
