--- a/app/src/main/res/layout/fragment_settings_about.xml
+++ b/app/src/main/res/layout/fragment_settings_about.xml
@@ -32,7 +32,7 @@
                 android:layout_height="1dp"
                 android:background="@android:color/darker_gray"/>
 
-            <construction.thesquare.shared.view.widget.JosefinSansTextView
+          <!--  <construction.thesquare.shared.view.widget.JosefinSansTextView
                 android:id="@+id/faq"
                 android:padding="12dp"
                 app:josefin_style="italic"
@@ -44,7 +44,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@android:color/darker_gray"/>
+                android:background="@android:color/darker_gray"/>-->
 
             <construction.thesquare.shared.view.widget.JosefinSansTextView
                 android:id="@+id/contact"
