--- a/app/src/main/res/layout/item_role_worker.xml
+++ b/app/src/main/res/layout/item_role_worker.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<construction.thesquare.employer.createjob.adapter.SquareLayout android:padding="2dp"
+<construction.thesquare.employer.createjob.adapter.SquareLayout
+    android:padding="2dp"
     android:layout_margin="2dp"
+    android:background="@color/graySquareColor"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
