--- a/app/src/main/res/layout/details_standard.xml
+++ b/app/src/main/res/layout/details_standard.xml
@@ -69,6 +69,12 @@
                 android:layout_marginTop="8dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
+
+            <construction.thesquare.shared.view.widget.JosefinSansTextView
+                android:textColor="@color/blackSquareColor"
+                android:text="£19.98 per booking"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
         </LinearLayout>
     </LinearLayout>
 </android.support.v7.widget.CardView>
