--- a/app/src/main/res/layout/fragment_my_graftrs_stub.xml
+++ b/app/src/main/res/layout/fragment_my_graftrs_stub.xml
@@ -20,26 +20,27 @@
         android:layout_height="80dp"/>
 
     <LinearLayout
-        android:visibility="gone"
+        android:id="@+id/no_matches"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="80dp"
-        android:id="@+id/no_matches"
         android:orientation="vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:visibility="gone">
 
         <construction.thesquare.shared.view.widget.JosefinSansTextView
-            android:text="@string/employer_liked"
-            app:josefin_style="italic"
+            android:id="@+id/noMatchesText"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_height="wrap_content" />
+            android:text="@string/employer_liked"
+            app:josefin_style="italic" />
 
         <View
-            android:layout_marginTop="12dp"
-            android:layout_gravity="center"
-            android:background="@drawable/bob"
             android:layout_width="140dp"
-            android:layout_height="140dp"/>
+            android:layout_height="140dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/bob" />
     </LinearLayout>
 </LinearLayout>
