--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -57,6 +57,8 @@
                         android:id="@+id/first"
                         app:josefin_style="light"
                         android:paddingBottom="4dp"
+                        android:hint="@string/create_job_first"
+                        android:textColorHint="@color/blackSquareColor"
                         android:textColor="@color/blackSquareColor"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
@@ -84,6 +86,8 @@
                         android:id="@+id/last"
                         app:josefin_style="light"
                         android:paddingBottom="4dp"
+                        android:hint="@string/create_job_last"
+                        android:textColorHint="@color/blackSquareColor"
                         android:textColor="@color/blackSquareColor"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
@@ -121,6 +125,8 @@
                     android:maxLength="19"
                     app:josefin_style="italic"
                     android:paddingBottom="4dp"
+                    android:hint="@string/create_job_card_number"
+                    android:textColorHint="@color/blackSquareColor"
                     android:textColor="@color/blackSquareColor"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
@@ -161,6 +167,7 @@
                                 android:hint="month"
                                 app:josefin_style="light"
                                 android:paddingBottom="4dp"
+                                android:textColorHint="@color/blackSquareColor"
                                 android:textColor="@color/blackSquareColor"
                                 android:layout_weight="1"
                                 android:layout_width="0dp"
@@ -175,6 +182,7 @@
                                 android:hint="year"
                                 app:josefin_style="light"
                                 android:paddingBottom="4dp"
+                                android:textColorHint="@color/blackSquareColor"
                                 android:textColor="@color/blackSquareColor"
                                 android:layout_weight="1"
                                 android:layout_width="0dp"
@@ -205,6 +213,8 @@
                             android:id="@+id/cvc"
                             app:josefin_style="light"
                             android:paddingBottom="4dp"
+                            android:hint="@string/create_job_cvc"
+                            android:textColorHint="@color/blackSquareColor"
                             android:textColor="@color/blackSquareColor"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" />
@@ -241,6 +251,8 @@
                     android:id="@+id/voucher"
                     app:josefin_style="light"
                     android:paddingBottom="4dp"
+                    android:hint="@string/payments_voucher"
+                    android:textColorHint="@color/blackSquareColor"
                     android:textColor="@color/blackSquareColor"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
@@ -284,6 +296,7 @@
                         android:hint="@string/payments_address2"
                         app:josefin_style="light"
                         android:paddingBottom="4dp"
+                        android:textColorHint="@color/blackSquareColor"
                         android:textColor="@color/blackSquareColor"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
@@ -295,6 +308,7 @@
                         android:hint="@string/payments_city"
                         app:josefin_style="light"
                         android:paddingBottom="4dp"
+                        android:textColorHint="@color/blackSquareColor"
                         android:textColor="@color/blackSquareColor"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
@@ -306,6 +320,7 @@
                         android:hint="@string/payments_country"
                         app:josefin_style="light"
                         android:paddingBottom="4dp"
+                        android:textColorHint="@color/blackSquareColor"
                         android:textColor="@color/blackSquareColor"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
@@ -333,6 +348,7 @@
                         android:id="@+id/postcode"
                         app:josefin_style="light"
                         android:paddingBottom="4dp"
+                        android:textColorHint="@color/blackSquareColor"
                         android:textColor="@color/blackSquareColor"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
