--- a/app/src/main/res/layout/fragment_employer_settings_notify.xml
+++ b/app/src/main/res/layout/fragment_employer_settings_notify.xml
@@ -1,109 +1,37 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:app="http://schemas.android.com/apk/res-auto"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".employer.settings.EmployerSettingsActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".worker.settings.ui.activity.WorkerSettingsActivity">
 
-    <android.support.v7.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        card_view:cardCornerRadius="2dp"
-        card_view:cardElevation="6dp"
-        android:layout_margin="12dp"
+    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="12dp"
+        card_view:cardCornerRadius="2dp"
+        card_view:cardElevation="6dp">
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <RelativeLayout
+            <construction.thesquare.shared.view.widget.JosefinSansTextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:text="Notifications ensure you are notified about new opportunities and important job details.
+Keep them switched on so you don't miss out!"
+                android:textColor="@color/blackSquareColor"
+                app:josefin_style="italic" />
 
-                <construction.thesquare.shared.view.widget.JosefinSansTextView
-                    android:padding="12dp"
-                    app:josefin_style="italic"
-                    android:textSize="16sp"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentLeft="true"
-                    android:layout_centerVertical="true"
-                    android:text="@string/employer_settings_notify1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-
-                <Switch
-                    android:id="@+id/notify_worker_app_messages"
-                    android:layout_marginRight="14dp"
-                    android:layout_centerVertical="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-            </RelativeLayout>
-
-            <View
+            <LinearLayout
+                android:id="@+id/switchesList"
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@android:color/darker_gray"/>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <construction.thesquare.shared.view.widget.JosefinSansTextView
-                    android:padding="12dp"
-                    app:josefin_style="italic"
-                    android:textSize="16sp"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"
-                    android:text="@string/employer_settings_notify2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-
-                <Switch
-                    android:id="@+id/notify_job_acceptance_rejections"
-                    android:layout_marginRight="14dp"
-                    android:layout_centerVertical="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-            </RelativeLayout>
-
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@android:color/darker_gray"/>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <construction.thesquare.shared.view.widget.JosefinSansTextView
-                    android:padding="12dp"
-                    app:josefin_style="italic"
-                    android:textSize="16sp"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"
-                    android:text="@string/settings_notify_reviews"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-
-                <Switch
-                    android:id="@+id/notify_reviews"
-                    android:layout_marginRight="14dp"
-                    android:layout_centerVertical="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-            </RelativeLayout>
+                android:layout_height="wrap_content"
+                android:orientation="vertical" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
-
-</FrameLayout>
+</LinearLayout>
