--- a/app/src/main/res/layout/fragment_job_matches.xml
+++ b/app/src/main/res/layout/fragment_job_matches.xml
@@ -7,7 +7,8 @@
     <FrameLayout
         android:id="@+id/worker_matches_hint"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:visibility="gone">
 
         <construction.thesquare.shared.view.widget.JosefinSansTextView
             style="@style/subheader_white_text"
