--- a/app/src/main/res/layout/include_worker_profile_details.xml
+++ b/app/src/main/res/layout/include_worker_profile_details.xml
@@ -563,7 +563,7 @@
                 android:id="@+id/worker_profile_requirements_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/employer_worker_details_requirements"
+                android:text="Practical info"
                 android:textColor="@color/blackSquareColor" />
 
             <construction.thesquare.shared.view.widget.JosefinSansTextView
