--- a/app/src/main/res/layout/fragment_help_worker.xml
+++ b/app/src/main/res/layout/fragment_help_worker.xml
@@ -5,16 +5,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <FrameLayout
-        android:id="@+id/worker_account_profile"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginBottom="20dp"
             android:layout_margin="18dp"
             android:gravity="center"
             android:orientation="vertical">
@@ -44,23 +38,32 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="15dp"
                 android:text="Search"/>
-            <RelativeLayout
-                android:id="@+id/relativeLayout1"
-                android:layout_width="match_parent"
+
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom" >
-            <construction.thesquare.shared.view.widget.JosefinSansTextView
-                android:id="@+id/contact_us"
-                android:textAlignment="center"
-                android:text="@string/help_contact_us"
-                android:drawableBottom="@android:drawable/sym_action_email"
-                android:layout_width="match_parent"
-                app:josefin_style="light"
-                android:textSize="20dp"
-                android:layout_alignParentBottom="true"
-                android:layout_height="wrap_content" />
-            </RelativeLayout>
+                android:id="@+id/recent_faq_section"
+                android:orientation="vertical">
+                <construction.thesquare.shared.view.widget.JosefinSansTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Frequently asked questions"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="15dp"
+                    android:textAlignment="center"
+                     android:layout_gravity="center"
+                    android:textSize="24dp"
+                    app:josefin_style="light" />
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/worker_top_search_rv"
+                    android:layout_width="wrap_content"
+                    android:scrollbars="vertical"
+                    android:layout_height="match_parent"/>
+            </LinearLayout>
+
+
+
         </LinearLayout>
 
-    </FrameLayout>
 </LinearLayout>
