--- a/app/src/main/res/layout/item_top_five_help_details.xml
+++ b/app/src/main/res/layout/item_top_five_help_details.xml
@@ -2,47 +2,48 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="6dp"
+    android:layout_margin="2dp"
     android:orientation="vertical"
-    card_view:cardCornerRadius="1dp"
-    card_view:cardElevation="2dp">
+    card_view:cardCornerRadius="0dp"
+    card_view:cardElevation="0dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <LinearLayout
-            android:layout_margin="8dp"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <construction.thesquare.shared.view.widget.JosefinSansTextView
                 android:id="@+id/question"
-                android:textSize="20dp"
                 android:textColor="@color/blackSquareColor"
                 app:josefin_style="italic"
-                android:layout_marginTop="14dp"
-                android:layout_marginBottom="5dp"
+                android:layout_marginTop="2dp"
+                android:layout_marginBottom="2dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
+            <!--  <construction.thesquare.shared.view.widget.JosefinSansTextView
+                  android:layout_width="match_parent"
+                  android:layout_marginTop="4dp"
+                  android:layout_marginBottom="5dp"
+                  android:id="@+id/answer"
+                  android:layout_height="wrap_content"/>-->
+
             <WebView
                 android:id="@+id/webview"
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="5dp"
+                android:layout_marginTop="2dp"
+                android:layout_marginBottom="2dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:scrollbars="none" />
 
+
         </LinearLayout>
     </RelativeLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="4dp"
-        android:layout_gravity="bottom"
-        android:background="@color/redSquareColor" />
-    </android.support.v7.widget.CardView>
+</android.support.v7.widget.CardView>
