--- a/app/src/main/res/layout/autocomplete_location.xml
+++ b/app/src/main/res/layout/autocomplete_location.xml
@@ -13,18 +13,6 @@
 
         <construction.thesquare.shared.view.widget.JosefinSansTextView
             app:josefin_style="italic"
-            android:layout_margin="8dp"
-            android:textSize="18sp"
-            android:textColor="@android:color/white"
-            android:textStyle="bold"
-            android:text="Cancel"
-            android:layout_alignParentLeft="true"
-            android:id="@+id/autocomple_cancel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-        <construction.thesquare.shared.view.widget.JosefinSansTextView
-            app:josefin_style="italic"
             android:text="Title"
             android:textSize="18sp"
             android:textColor="@android:color/white"
@@ -40,18 +28,6 @@
             android:id="@+id/progress"
             android:layout_width="22dp"
             android:layout_height="22dp" />
-
-        <construction.thesquare.shared.view.widget.JosefinSansTextView
-            app:josefin_style="italic"
-            android:layout_margin="8dp"
-            android:textSize="18sp"
-            android:textColor="@android:color/white"
-            android:textStyle="bold"
-            android:text="Done"
-            android:layout_alignParentRight="true"
-            android:id="@+id/autocomple_done"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
     </RelativeLayout>
 
     <View
@@ -77,4 +53,37 @@
         android:id="@+id/autocomplete_rv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+
+
+    <RelativeLayout
+        android:layout_marginTop="42dp"
+        android:layout_gravity="center_horizontal"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <construction.thesquare.shared.view.widget.JosefinSansTextView
+            android:id="@+id/autocomple_done"
+            android:text="Confirm"
+            android:layout_margin="12dp"
+            android:padding="8dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:background="@color/redSquareColor"
+            android:textColor="@android:color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <construction.thesquare.shared.view.widget.JosefinSansTextView
+            android:id="@+id/autocomple_cancel"
+            android:text="Cancel"
+            android:layout_margin="12dp"
+            android:padding="8dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:background="@drawable/square_bordered_thin"
+            android:textColor="@color/redSquareColor"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </RelativeLayout>
 </LinearLayout>
