--- a/app/src/main/res/layout/dialog_verify_password.xml
+++ b/app/src/main/res/layout/dialog_verify_password.xml
@@ -48,6 +48,7 @@
             android:text="Confirm"
             android:layout_margin="12dp"
             android:padding="8dp"
+            android:visibility="gone"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:background="@color/redSquareColor"
