--- a/app/src/main/res/layout/fragment_job_details_worker.xml
+++ b/app/src/main/res/layout/fragment_job_details_worker.xml
@@ -240,7 +240,7 @@
 
                     <!-- Requirements -->
                     <construction.thesquare.shared.view.widget.JosefinSansTextView
-                        android:text="@string/job_details_mandatory_requirements"
+                        android:text="Practical Requirements"
                         android:id="@+id/job_details_reqs_label"
                         android:textSize="16sp"
                         android:drawablePadding="18dp"
