--- a/app/src/main/res/layout/fragment_verify_phone.xml
+++ b/app/src/main/res/layout/fragment_verify_phone.xml
@@ -30,6 +30,25 @@
             android:text="@string/phone_verification_second_title" />
 
 
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/askForEmailEditTextWrapper"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:hintEnabled="false">
+
+            <construction.thesquare.shared.view.widget.JosefinSansEditText
+                android:id="@+id/askForEmailEditText"
+                style="@style/square_edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/phone_verification_email_text"
+                android:inputType="textEmailAddress"
+                android:maxLines="1"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:textColorHint="#999999" />
+        </android.support.design.widget.TextInputLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
