changed gray color text to black in few screens

--- a/app/src/main/res/layout/item_worker_details.xml
+++ b/app/src/main/res/layout/item_worker_details.xml
@@ -15,7 +15,7 @@
 
     <construction.thesquare.shared.view.widget.StrikeJosefinSansTextView
         android:id="@+id/worker_details"
-        style="@style/caption_gray_text"
+        style="@style/caption_black_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
