--- a/app/src/main/res/layout/item_job.xml
+++ b/app/src/main/res/layout/item_job.xml
@@ -150,7 +150,7 @@
 
                     <construction.thesquare.shared.view.widget.JosefinSansTextView
                         android:id="@+id/item_job_start_date"
-                        style="@style/caption_gray_text"
+                        style="@style/caption_black_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="15dp"
@@ -171,7 +171,7 @@
 
                     <construction.thesquare.shared.view.widget.JosefinSansTextView
                         android:id="@+id/item_job_location"
-                        style="@style/caption_gray_text"
+                        style="@style/caption_black_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="center"
