--- a/app/src/main/res/layout/fragment_price_plan.xml
+++ b/app/src/main/res/layout/fragment_price_plan.xml
@@ -315,9 +315,10 @@
                     android:layout_height="24dp" />
             </android.support.v7.widget.CardView>
 
-            <!-- Cancel -->
+            <!-- Understanding my price plan -->
             <android.support.v7.widget.CardView
                 app:cardElevation="4dp"
+                android:id="@+id/understand"
                 android:layout_marginRight="12dp"
                 android:layout_marginBottom="12dp"
                 android:layout_marginLeft="12dp"
