understanding price plan done

--- a/app/src/main/res/layout/fragment_payments.xml
+++ b/app/src/main/res/layout/fragment_payments.xml
@@ -24,6 +24,8 @@
                 app:josefin_style="italic"
                 android:layout_margin="12dp"
                 android:textSize="20sp"
+                android:gravity="center"
+                android:id="@+id/first_time_user_text"
                 android:layout_gravity="center_horizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
